--- a/src/main/resources/views/landing_page.fxml
+++ b/src/main/resources/views/landing_page.fxml
@@ -32,20 +32,38 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.ComboBox?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="landing_page" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../styles/landing_page.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.LandingPageController">
+<AnchorPane fx:id="landing_page" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleResetPassword" prefHeight="540.0" prefWidth="1080.0" styleClass="anchor-pane" stylesheets="@../styles/landing_page.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.LandingPageController">
    <children>
-      <Label fx:id="id_number_label" layoutX="122.0" layoutY="132.0" prefHeight="38.0" prefWidth="91.0" text="Id Number" />
-      <Label fx:id="password_label" layoutX="122.0" layoutY="233.0" prefHeight="38.0" prefWidth="91.0" text="Password" />
-      <Label fx:id="department_label" layoutX="122.0" layoutY="189.0" prefHeight="38.0" prefWidth="91.0" text="Depratment" />
-      <TextField fx:id="id_number_text_field" layoutX="217.0" layoutY="121.0" prefHeight="38.0" prefWidth="166.0" />
-      <ComboBox fx:id="department_combo_box" layoutX="217.0" layoutY="189.0" prefHeight="28.0" prefWidth="166.0" />
-      <PasswordField fx:id="password_field" layoutX="217.0" layoutY="234.0" />
-      <Label fx:id="login_label" layoutX="122.0" layoutY="82.0" prefHeight="38.0" prefWidth="114.0" text="Login" />
+      <Button fx:id="aboutUs" layoutX="624.0" layoutY="485.0" mnemonicParsing="false" onAction="#handleAboutUs" styleClass="about-btn" text="About Us" />
+      <AnchorPane layoutX="79.0" layoutY="89.0" prefHeight="362.0" prefWidth="270.0" styleClass="aastu-logo" />
+      <AnchorPane fx:id="inputFieldAnchorPane" layoutX="446.0" layoutY="88.0" prefHeight="362.0" prefWidth="394.0">
+         <children>
+            <Label fx:id="login_label" layoutX="10.0" layoutY="65.0" prefHeight="38.0" prefWidth="114.0" styleClass="login-label" text="Login" />
+            <Label fx:id="id_number_label" layoutX="14.0" layoutY="149.0" prefHeight="43.0" prefWidth="106.0" styleClass="id-label" text="Id number" />
+            <Label fx:id="password_label" layoutX="14.0" layoutY="211.0" prefHeight="38.0" prefWidth="106.0" styleClass="password-label" text="Password" />
+            <TextField fx:id="idNumber" alignment="CENTER" layoutX="125.0" layoutY="156.0" prefHeight="30.0" prefWidth="235.0" promptText="ETS----/--" styleClass="id-field" />
+            <PasswordField fx:id="password" alignment="CENTER" layoutX="125.0" layoutY="215.0" prefHeight="30.0" prefWidth="235.0" promptText="*******" styleClass="password-field" />
+            <Button fx:id="submit" layoutX="280.0" layoutY="285.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit">
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="btn-success" />
+               </styleClass>
+            </Button>
+            <Button fx:id="signUp" layoutX="280.0" layoutY="70.0" mnemonicParsing="false" onAction="#handleSignUp" text="Signup">
+               <styleClass>
+                  <String fx:value="btn" />
+                  <String fx:value="btn-info" />
+               </styleClass>
+            </Button>
+            <Button fx:id="forgotPassword" layoutX="124.0" layoutY="286.0" mnemonicParsing="false" onAction="#handleForgotPassword" prefHeight="30.0" prefWidth="121.0" styleClass="reset-btn" text="Forgot password?" underline="true" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
