--- a/src/main/resources/styles/landing_page.css
+++ b/src/main/resources/styles/landing_page.css
@@ -21,7 +21,8 @@
 }
 
 .password-field,
-.id-field {
+.id-field,
+.reset-pw-textfield {
     -fx-border-radius: 10px;
     -fx-background-radius: 10 10 10 10;
     -fx-border-color: goldenrod;
@@ -32,7 +33,8 @@
     -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.btn {
+.btn,
+.confirm-reset-btn {
     -fx-border-radius: 10px;
     -fx-background-radius: 10 10 10 10;
     -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -44,7 +46,9 @@
 }
 
 .reset-btn:hover,
-.about-btn:hover {
+.about-btn:hover,
+.back-home-btn,
+.confirm-btn {
     -fx-scale-y: 1.1;
     -fx-cursor: hand;
     -fx-transition: 1s;
@@ -64,6 +68,37 @@
     -fx-background-size: cover;
     -fx-background-position: center;
     -fx-background-color: transparent;
-    /* -fx-border-color: black; */
     -fx-border-width: 1px;
 }
+
+.error-message {
+    -fx-font-size: 12px;
+    -fx-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* -fx-text-fill: #f46600; */
+}
+
+
+
+.reset-pw-head {
+    -fx-font-size: 18px;
+    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    -fx-text-fill: #042C54;
+}
+
+.back-home-btn,
+.confirm-reset-btn {
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-text-fill: white;
+}
+
+.back-home-btn {
+    -fx-background-color: #ffc107;
+    -fx-border-color: #ffc107;
+}
+
+.confirm-reset-btn {
+    -fx-background-color: #28a745;
+    -fx-border-color: #28a745;
+}
+
