--- a/src/main/resources/views/landing_page.fxml
+++ b/src/main/resources/views/landing_page.fxml
@@ -43,7 +43,7 @@
    <children>
       <Button fx:id="aboutUs" layoutX="625.0" layoutY="495.0" mnemonicParsing="false" onAction="#handleAboutUs" styleClass="about-btn" text="About Us" />
       <AnchorPane layoutX="48.0" layoutY="89.0" prefHeight="362.0" prefWidth="270.0" styleClass="aastu-logo" />
-      <AnchorPane fx:id="inputFieldAnchorPane" layoutX="352.0" layoutY="69.0" prefHeight="402.0" prefWidth="594.0">
+      <AnchorPane fx:id="inputFieldAnchorPane" id="inputFieldAnchorPane" layoutX="352.0" layoutY="69.0" prefHeight="402.0" prefWidth="594.0">
          <children>
             <Label fx:id="login_label" layoutX="122.0" layoutY="75.0" prefHeight="38.0" prefWidth="114.0" styleClass="login-label" text="Login" />
             <Label fx:id="id_number_label" layoutX="126.0" layoutY="159.0" prefHeight="43.0" prefWidth="106.0" styleClass="id-label" text="Id number" />
