--- a/src/main/resources/styles/landing_page.css
+++ b/src/main/resources/styles/landing_page.css
@@ -8,7 +8,7 @@
 
 .login-label {
     -fx-font-size: 36px;
-    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    -fx-font: 'Courier New';
     -fx-text-fill: #042C54;
 }
 
@@ -17,7 +17,7 @@
     -fx-font-size: 15px;
     -fx-font-weight: bold;
     -fx-text-fill: #c6c6c6;
-    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    -fx-font: 'Courier New';
 }
 
 .password-field,
@@ -30,14 +30,16 @@
 
     -fx-text-fill: white;
     -fx-font-size: 14px;
-    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    -fx-font: 'Courier New';
+
 }
 
 .btn,
 .confirm-reset-btn {
     -fx-border-radius: 10px;
     -fx-background-radius: 10 10 10 10;
-    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    -fx-font: 'Courier New';
+
 }
 
 .about-btn,
@@ -54,8 +56,8 @@
     -fx-transition: 1s;
 }
 
-.reset-label:focus,
-.about-btn:focus {
+.reset-label:focused,
+.about-btn:focused {
     -fx-scale-y: 0.9;
     -fx-scale-x: 0.9;
 }
@@ -73,7 +75,7 @@
 
 .error-message {
     -fx-font-size: 12px;
-    -fx-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    -fx-font: 'Courier New';
     /* -fx-text-fill: #f46600; */
 }
 
@@ -81,7 +83,7 @@
 
 .reset-pw-head {
     -fx-font-size: 18px;
-    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    -fx-font: 'Courier New';
     -fx-text-fill: #042C54;
 }
 
@@ -102,3 +104,6 @@
     -fx-border-color: #28a745;
 }
 
+.about-btn {
+    -fx-text-fill: #c6c6c6;
+}
