--- a/src/main/resources/views/forgot_password_page.fxml
+++ b/src/main/resources/views/forgot_password_page.fxml
@@ -10,7 +10,7 @@
       <Label layoutX="106.0" layoutY="59.0" prefHeight="30.0" prefWidth="148.0" styleClass="reset-pw-head" text="Reset Password" />
       <Label layoutX="106.0" layoutY="117.0" prefHeight="30.0" prefWidth="62.0" styleClass="id-label" text="Email" />
       <TextField alignment="CENTER" layoutX="194.0" layoutY="120.0" prefHeight="26.0" prefWidth="279.0" promptText="-.-@aastustudent.edu.et" styleClass="reset-pw-textfield" />
-      <Button fx:id="confirmResetBtn" layoutX="517.0" layoutY="120.0" mnemonicParsing="false" styleClass="confirm-reset-btn" text="Confirm" />
+      <Button fx:id="confirmResetBtn" layoutX="517.0" layoutY="120.0" mnemonicParsing="false" onAction="#handleConfirmResetBtn" styleClass="confirm-reset-btn" text="Confirm" />
       <Button fx:id="backToHome" layoutX="106.0" layoutY="167.0" mnemonicParsing="false" onAction="#backToHome" styleClass="back-home-btn" text="Login" />
    </children>
 </AnchorPane>
