--- a/src/main/resources/styles/landing_page.css
+++ b/src/main/resources/styles/landing_page.css
@@ -8,7 +8,7 @@
 
 .login-label {
     -fx-font-size: 36px;
-    -fx-font: 'Courier New';
+    -fx-font: "Courier New";
     -fx-text-fill: #042C54;
 }
 
@@ -17,7 +17,7 @@
     -fx-font-size: 15px;
     -fx-font-weight: bold;
     -fx-text-fill: #c6c6c6;
-    -fx-font: 'Courier New';
+    -fx-font: "Courier New";
 }
 
 .password-field,
@@ -30,7 +30,7 @@
 
     -fx-text-fill: white;
     -fx-font-size: 14px;
-    -fx-font: 'Courier New';
+    -fx-font: "Courier New";
 
 }
 
@@ -75,7 +75,7 @@
 
 .error-message {
     -fx-font-size: 12px;
-    -fx-font: 'Courier New';
+    -fx-font: "Courier New";
     /* -fx-text-fill: #f46600; */
 }
 
@@ -83,7 +83,7 @@
 
 .reset-pw-head {
     -fx-font-size: 18px;
-    -fx-font: 'Courier New';
+    -fx-font: "Courier New";
     -fx-text-fill: #042C54;
 }
 
