--- a/src/main/resources/views/notification/change_pwd_page.fxml
+++ b/src/main/resources/views/notification/change_pwd_page.fxml
@@ -7,13 +7,14 @@
 
 <AnchorPane fx:id="changePwdAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="229.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g3.scms.controllers.AccountController">
    <children>
-      <PasswordField layoutX="112.0" layoutY="122.0" prefHeight="26.0" prefWidth="98.0" />
-      <PasswordField layoutX="112.0" layoutY="175.0" prefHeight="26.0" prefWidth="98.0" />
-      <PasswordField layoutX="112.0" layoutY="227.0" prefHeight="26.0" prefWidth="98.0" />
+      <PasswordField fx:id="oldPassword" layoutX="112.0" layoutY="122.0" prefHeight="26.0" prefWidth="98.0" />
+      <PasswordField fx:id="newPassword" layoutX="112.0" layoutY="166.0" prefHeight="26.0" prefWidth="98.0" />
+      <PasswordField fx:id="confirmNewPassword" layoutX="112.0" layoutY="213.0" prefHeight="26.0" prefWidth="98.0" />
       <Label layoutX="14.0" layoutY="75.0" prefHeight="18.0" prefWidth="109.0" text="Change Password" />
       <Label layoutX="14.0" layoutY="126.0" prefHeight="18.0" prefWidth="98.0" text="Old password" />
-      <Label layoutX="14.0" layoutY="179.0" prefHeight="18.0" prefWidth="98.0" text="New password" />
-      <Label layoutX="14.0" layoutY="231.0" prefHeight="18.0" prefWidth="98.0" text="Confirm" />
-      <Button layoutX="112.0" layoutY="277.0" mnemonicParsing="false" text="Change" />
+      <Label layoutX="14.0" layoutY="170.0" prefHeight="18.0" prefWidth="98.0" text="New password" />
+      <Label layoutX="14.0" layoutY="217.0" prefHeight="18.0" prefWidth="98.0" text="Confirm" />
+      <Button fx:id="changeBtn" layoutX="112.0" layoutY="277.0" mnemonicParsing="false" onAction="#handleChangeBtn" text="Change" />
+      <Label fx:id="errorLabel" layoutX="71.0" layoutY="250.0" prefHeight="18.0" prefWidth="138.0" text="Label" />
    </children>
 </AnchorPane>
